# flet-app-github-search

./: README.md  pyproject.toml
.papelera/: main2.py
src/: main.py
